<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@drawable/woofbg"
    android:weightSum="8.5"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_gravity="center_horizontal|center_vertical"
        android:layout_marginBottom="30dp"
        android:layout_weight="2.4"
        android:layout_width="match_parent"
        android:layout_height="0dp">

        <ImageView
            android:id="@+id/profile_image"
            android:src="@drawable/dalmatiancircle"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="90dp" />

        <TextView
            android:id="@+id/dog_name"
            android:fontFamily="@font/robotoslab_bold"
            android:text="@string/profile_name"
            android:textSize="24sp"
            android:textColor="@color/black"
            android:layout_marginTop="120dp"
            android:gravity="center_horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/profileID"
            android:fontFamily="@font/robotoslab_bold"
            android:text="@string/profile_id"
            android:textSize="15sp"
            android:textColor="@color/black"
            android:layout_marginTop="150dp"
            android:gravity="center_horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_weight="0.3"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        >

        <TextView
            android:id="@+id/breedHeading"
            android:text="@string/breed_text"
            android:fontFamily="@font/robotoslab_regular"
            android:layout_marginLeft="10dp"
            android:textSize="15sp"
            android:textColor="@color/gray"
            android:textStyle="bold"
            android:layout_alignParentLeft="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:ignore="RelativeOverlap"
            android:layout_marginStart="10dp"
            android:layout_alignParentStart="true" />

        <TextView
            android:text="@string/weight_text"
            android:fontFamily="@font/robotoslab_regular"
            android:textSize="15sp"
            android:textColor="@color/gray"
            android:textStyle="bold"
            android:layout_toLeftOf="@+id/ageText"
            android:layout_toStartOf="@+id/ageText"
            android:layout_marginRight="55dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="55dp"
            tools:ignore="RelativeOverlap" />

        <TextView
            android:id="@+id/ageText"
            android:text="@string/age_text"
            android:fontFamily="@font/robotoslab_regular"
            android:textSize="15sp"
            android:textColor="@color/gray"
            android:textStyle="bold"
            android:layout_alignParentRight="true"
            android:layout_marginRight="50dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="50dp" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="2dp"
        android:layout_weight="0.4"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        >

        <TextView
            android:id="@+id/breedName"
            android:text="@string/breed_name"
            android:fontFamily="@font/robotoslab_regular"
            android:layout_marginLeft="10dp"
            android:textSize="15sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:layout_alignParentLeft="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:ignore="RelativeOverlap"
            android:layout_marginStart="10dp"
            android:layout_alignParentStart="true" />

        <TextView
            android:id="@+id/weightValue"
            android:text="@string/weight_value"
            android:fontFamily="@font/robotoslab_regular"
            android:textSize="15sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:layout_toLeftOf="@+id/ageValue"
            android:layout_marginRight="75dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="75dp"
            tools:ignore="RelativeOverlap"
            android:layout_toStartOf="@+id/ageValue" />

        <TextView
            android:id="@+id/ageValue"
            android:text="@string/age_value"
            android:fontFamily="@font/robotoslab_regular"
            android:textSize="15sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:layout_alignParentRight="true"
            android:layout_marginRight="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="20dp" />

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/linear1"
        android:layout_weight="0.8"
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="0dp">

        <RelativeLayout
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            >

            <TextView
                android:id="@+id/dogLocation"
                android:text="@string/location_text"
                android:fontFamily="@font/robotoslab_regular"
                android:layout_marginLeft="10dp"
                android:textSize="15sp"
                android:textColor="@color/gray"
                android:textStyle="bold"
                android:layout_alignParentLeft="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_alignParentStart="true" />

            <TextView
                android:id="@+id/location"
                android:text="@string/location_value"
                android:fontFamily="@font/robotoslab_regular"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="20dp"
                android:textSize="15sp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:layout_alignParentLeft="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_alignParentStart="true" />

            <Button
                android:id="@+id/button2"
                android:fontFamily="@font/robotoslab_bold"
                android:layout_alignParentRight="true"
                android:layout_marginRight="85dp"
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:text="FOLLOW" />

            <Button
                android:id="@+id/button3"
                android:fontFamily="@font/robotoslab_bold"
                android:layout_alignParentRight="true"
                android:layout_marginRight="20dp"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:textSize="17sp"
                android:textColor="@color/black"
                android:text="..." />

        </RelativeLayout>

    </LinearLayout>

    <RelativeLayout
        android:layout_weight="4.4"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="14dp"
        >

        <ImageView
            android:src="@drawable/labranew"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </RelativeLayout>

</LinearLayout>