<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/woofbg"
    android:orientation="vertical"
    android:weightSum="8"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center_vertical|center_horizontal"
        android:layout_marginBottom="30dp"
        android:layout_weight="1.2">

        <TextView
            android:id="@+id/textGrid"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="26dp"
            android:fontFamily="@font/robotoslab_bold"
            android:gravity="center_vertical"
            android:text="@string/date"
            android:textColor="@color/black"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/textDay"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="26dp"
            android:fontFamily="@font/robotoslab_extrabold"
            android:gravity="bottom"
            android:text="@string/day_form"
            android:textColor="@color/black"
            android:textSize="36sp" />

    </RelativeLayout>

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.6"
        android:alignmentMode="alignMargins"
        android:columnCount="1"
        android:columnOrderPreserved="false"
        android:paddingLeft="14dp"
        android:paddingRight="14dp"
        android:rowCount="1">

        <!-- Row 1 -->
        <!-- Column 1 -->
        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="16dp"
            app:cardCornerRadius="8dp"
            app:cardElevation="8dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="right|center_vertical"
                android:layout_margin="16dp"
                android:gravity="center_vertical">

                <ImageView
                    android:id="@+id/dog_image"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_alignParentLeft="true"
                    android:layout_marginLeft="15dp"
                    android:src="@drawable/dalmatiancircle" />

                <TextView
                    android:layout_width="190dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="20dp"
                    android:layout_toRightOf="@+id/dog_image"
                    android:fontFamily="@font/robotoslab_bold"
                    android:text="@string/activity_desc"
                    android:textColor="@color/black"
                    android:textSize="22sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/time_live"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@+id/dog_image"
                    android:layout_marginLeft="20dp"
                    android:layout_toRightOf="@+id/dog_image"
                    android:fontFamily="@font/robotoslab_bold"
                    android:text="@string/time_live"
                    android:textColor="@color/gray"
                    android:textSize="13sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/time_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@+id/dog_image"
                    android:layout_marginLeft="5dp"
                    android:layout_toRightOf="@+id/time_live"
                    android:fontFamily="@font/robotoslab_bold"
                    android:text="@string/time_value"
                    android:textColor="@color/black"
                    android:textSize="13sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/dist_live"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@+id/dog_image"
                    android:layout_marginLeft="20dp"
                    android:layout_toRightOf="@+id/time_value"
                    android:fontFamily="@font/robotoslab_bold"
                    android:text="@string/dist_live"
                    android:textColor="@color/gray"
                    android:textSize="13sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/dist_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@+id/dog_image"
                    android:layout_marginLeft="5dp"
                    android:layout_toRightOf="@+id/dist_live"
                    android:fontFamily="@font/robotoslab_bold"
                    android:text="@string/dist_value"
                    android:textColor="@color/black"
                    android:textSize="13sp"
                    android:textStyle="bold" />

            </RelativeLayout>

        </androidx.cardview.widget.CardView>

    </GridLayout>

    <GridLayout
        android:layout_width="150dp"
        android:layout_height="0dp"
        android:layout_weight="0.6"
        android:alignmentMode="alignMargins"
        android:columnCount="1"
        android:columnOrderPreserved="false"
        android:paddingLeft="14dp"
        android:paddingRight="14dp"
        android:rowCount="1">

        <!-- Row 1 -->
        <!-- Column 1 -->
        <androidx.cardview.widget.CardView
            android:id="@+id/liveCard"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="16dp"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="20dp"
            app:cardElevation="8dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/robotoslab_bold"
                android:gravity="center"
                android:text="@string/live_card"
                android:textColor="@color/red"
                android:textSize="18sp" />

        </androidx.cardview.widget.CardView>

    </GridLayout>

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4.4"
        android:alignmentMode="alignMargins"
        android:columnCount="1"
        android:columnOrderPreserved="false"
        android:paddingLeft="14dp"
        android:paddingRight="14dp"
        android:rowCount="1">

        <!-- Row 1 -->
        <!-- Column 1 -->
        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="2dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="16dp"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="8dp"
            app:cardElevation="8dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="Maps to be Placed."
                    android:textSize="22sp"
                    android:textStyle="bold" />

            </RelativeLayout>

        </androidx.cardview.widget.CardView>

    </GridLayout>

</LinearLayout>